--- a/src/componets/Header/Header.module.css
+++ b/src/componets/Header/Header.module.css
@@ -1,5 +1,6 @@
 .headerContainer {
-  width: 1440px;
+  max-width: 1440px;
+  width: 100%;
   padding: 40px 0;
   margin: 0 auto;
   background: #fff;
