--- a/src/componets/Hero/Hero.module.css
+++ b/src/componets/Hero/Hero.module.css
@@ -1,36 +1,25 @@
 .heroContainer {
   max-width: 1440px;
   margin: 0 auto;
-  position: relative;
+  width: 100%;
 }
 
 .hero {
   width: 100%;
   min-height: 600px;
-  background-image: url('../../assets/images/hero.svg');
+  background-image: url('../../assets/images/hero.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+
  
 }
 
-.hero::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
 
 .heroContent {
-  position: relative;
-  z-index: 1;
  
   color: white;
   padding: 0 20px;
