--- a/src/componets/CallToActionForm/CallToActionForm.module.css
+++ b/src/componets/CallToActionForm/CallToActionForm.module.css
@@ -26,6 +26,14 @@ line-height: 1.3;
 text-align: center;
 color: #282828;
 margin-top: 16px;
+border: transparent;
+cursor: pointer;
+transition: all 0.3s ease-in-out;
 
+}
+
+.button:hover{
+    background-color: #282828;
+    color: #fff;
 
 }
