--- a/src/componets/Header/Header.module.css
+++ b/src/componets/Header/Header.module.css
@@ -42,6 +42,7 @@
   text-decoration: none;
   transition: color 0.3s;
   white-space: nowrap;
+  transition: all 0.3s ease-in-out;
 }
 
 .link:hover {
