--- a/src/componets/Sale/Sale.module.css
+++ b/src/componets/Sale/Sale.module.css
@@ -1,4 +1,4 @@
-.categories{
+.sale{
   padding: 40px 0px 53px ;
 }
 .container {
@@ -31,21 +31,43 @@ padding: 8px 16px;
 color: #ddd;
 min-width: 142px;
 text-decoration: none;
+text-align: center;
 
 }
-.listCateries{
+.discountsWrapp{
+    position: relative;
+}
+
+.discounts{
+border-radius: 6px;
+padding: 4px 8px;
+background: #0d50ff;
+font-weight: 600;
+font-size: 20px;
+line-height: 1.3;
+letter-spacing: 0.03em;
+color: #fff;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+}
+.listSale{
   gap: 40px;
   display: flex
 ;
 }
-.itemCateries{
+.itemSale{
   list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  border: 1px solid #ddd;
+border-radius: 12px;
+max-width: 316px;
+width: 100%;
 }
-.imgCateries{
+.imgSale{
 border-radius: 12px;
 max-width: 316px;
 max-height: 350px;
@@ -53,10 +75,32 @@ object-fit: cover;
 object-position: center;
 width: 100%;
 }
-.itemTitleCateries{
-  font-weight: 500;
+.cardWrapp{
+    padding: 0px 32px 34px 32px;
+    width: 100%;
+}
+.itemTitleSale{
+font-weight: 500;
 font-size: 20px;
 line-height: 1.3;
 text-align: center;
 color: #282828;
+margin-bottom: 16px;
+}
+.priceWrapp{
+    display: flex;
+    align-items: flex-end;
+    gap: 20px
+
+}
+.price{font-weight: 600;
+font-size: 40px;
+line-height: 1.1;
+color: #282828;}
+.pricesale{
+    font-weight: 500;
+font-size: 20px;
+line-height: 1.3;
+text-decoration: line-through;
+color: #8b8b8b;
 }
