--- a/src/componets/CallToActionForm/CallToActionForm.module.css
+++ b/src/componets/CallToActionForm/CallToActionForm.module.css
@@ -12,10 +12,17 @@ background-color: transparent;
 margin-bottom: 16px;
 }
 .input::placeholder{
-  font-weight: 500;
+font-weight: 500;
 font-size: 20px;
 line-height: 1.3;
 color: #fff;
+}
+.errors{
+font-size: 20px;
+line-height: 1.3;
+color: #8b8b8b;
+margin-bottom: 8px;
+
 }
 .button{
 border-radius: 6px;
