--- a/src/componets/Categories/Categories.module.css
+++ b/src/componets/Categories/Categories.module.css
@@ -34,9 +34,14 @@ text-decoration: none;
 
 }
 .listCateries{
-  gap: 40px;
-  display: flex
-;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 32px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
 }
 .itemCateries{
   list-style: none;
