--- a/src/componets/CardProduct/CardProduct.module.css
+++ b/src/componets/CardProduct/CardProduct.module.css
@@ -1,18 +1,3 @@
-.product {
-  padding: 40px 0px 53px;
-}
-.container {
-  max-width: 1440px;
-  padding: 0px 40px;
-  margin: 0 auto;
-}
-.secondTitle {
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 1.1;
-  color: #282828;
-  margin-bottom: 32px;
-}
 
 .discountsWrapp {
   position: relative;
@@ -35,14 +20,6 @@
 }
 
 
-.list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 32px;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
 .item {
   display: flex;
   flex-direction: column;
@@ -96,8 +73,6 @@
 
 
 
-/* Додайте ці стилі до вашого AllProductsPage.module.css */
-
 .cardContent {
   display: flex;
   flex-direction: column;
@@ -113,11 +88,11 @@
   text-align: center;
   color: #282828;
   margin-bottom: 16px;
-  flex-grow: 1; /* Займає весь доступний простір */
+  flex-grow: 1; 
 }
 
 .priceContainer {
-  margin-top: auto; /* Притискає ціну до низу */
+  margin-top: auto; 
 }
 
 .priceWrapp {
@@ -138,7 +113,7 @@
   font-weight: 600;
   font-size: 40px;
   line-height: 1.1;
-  color: #282828;
+ color: #282828;
 }
 
 .originalPrice {
@@ -148,10 +123,3 @@
   text-decoration: line-through;
   color: #8b8b8b;
 }
-
-
-
-
-
-
-
