--- a/src/componets/OrderForm/OrderForm.module.css
+++ b/src/componets/OrderForm/OrderForm.module.css
@@ -1,21 +1,22 @@
 .form {
   display: flex;
   flex-direction: column;
-  max-width: 600px;
-  min-width: 516px;
+  width: 100%;
+  
 }
 .input {
-  border: 1px solid #fff;
+  border: 1px solid #ddd;
   border-radius: 6px;
   padding: 16px 32px;
   background-color: transparent;
   margin-bottom: 16px;
+  background: #fff;
 }
 .input::placeholder {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.3;
-  color: #fff;
+  color: #8b8b8b;
 }
 .errors {
   font-size: 16px;
@@ -30,11 +31,12 @@
   font-size: 20px;
   line-height: 1.3;
   text-align: center;
-  color: #282828;
+  color: #fff;
   margin-top: 16px;
   border: transparent;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  background: #0d50ff;
 }
 
 .button:hover {
