--- a/src/componets/Sale/Sale.module.css
+++ b/src/componets/Sale/Sale.module.css
@@ -52,8 +52,12 @@ color: #fff;
     right: 16px;
 }
 .listSale{
-  gap: 40px;
-  display: flex
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 32px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 ;
 }
 .itemSale{
@@ -93,7 +97,8 @@ margin-bottom: 16px;
     gap: 20px
 
 }
-.price{font-weight: 600;
+.price{
+font-weight: 600;
 font-size: 40px;
 line-height: 1.1;
 color: #282828;}
