--- a/src/componets/Cart/Cart.module.css
+++ b/src/componets/Cart/Cart.module.css
@@ -1,4 +1,7 @@
 .productsSection {
+  display: flex;
+  gap: 32px;
+
 }
 .list {
   list-style: none;
@@ -35,28 +38,6 @@
   align-items: center;
   gap: 32px;
 }
-.quantityControls {
-}
-.quantityBtn {
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  padding: 17px;
-  cursor: pointer;
-  background-color: transparent;
-  align-items: center;
-}
-.quantityValue {
-  border-bottom: 1px solid #ddd;
-  border-top: 1px solid #ddd;
-  max-width: 96px;
-  padding: 16px;
-  height: 58px;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 1.3;
-  text-align: center;
-  color: #282828;
-}
 .pricing {
   display: flex;
   align-items: flex-end;
@@ -87,6 +68,9 @@
 .removeImg {
 }
 .orderSummarySection {
+  display: flex;
+  
+   
 }
 .orderSummary {
   padding: 20px;
