--- a/src/componets/Categories/Categories.module.css
+++ b/src/componets/Categories/Categories.module.css
@@ -48,7 +48,6 @@ text-decoration: none;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
 }
 .imgCateries{
 border-radius: 12px;
@@ -59,9 +58,13 @@ object-position: center;
 width: 100%;
 }
 .itemTitleCateries{
-  font-weight: 500;
+font-weight: 500;
 font-size: 20px;
 line-height: 1.3;
 text-align: center;
 color: #282828;
+margin-top: 16px;
+}
+.linkToCategori{
+  text-decoration: none;
 }
