--- a/src/componets/CallToActionForm/CallToActionForm.module.css
+++ b/src/componets/CallToActionForm/CallToActionForm.module.css
@@ -41,3 +41,42 @@
   background-color: #282828;
   color: #fff;
 }
+
+@media (max-width: 768px) {
+  .form {
+    max-width: 500px;
+  }
+  
+  .input {
+    padding: 14px 20px;
+  }
+  
+  .button {
+    padding: 14px 28px;
+  }
+}
+
+@media (max-width: 480px) {
+  .form {
+    min-width: 300px;
+    width: 100%;
+  }
+  
+  .input {
+    padding: 12px 16px;
+    font-size: 14px;
+  }
+  
+  .input::placeholder {
+    font-size: 14px;
+  }
+  
+  .button {
+    padding: 12px 24px;
+    font-size: 14px;
+  }
+  
+  .errors {
+    font-size: 12px;
+  }
+}
