--- a/src/componets/CardProduct/CardProduct.module.css
+++ b/src/componets/CardProduct/CardProduct.module.css
@@ -1,6 +1,7 @@
-
 .discountsWrapp {
   position: relative;
+  flex-grow: 1;
+  flex-basis: 60%;
 }
 
 .discounts {
@@ -15,10 +16,14 @@
   position: absolute;
   top: 16px;
   right: 16px;
-   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-
+.cardLink {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
 
 .item {
   display: flex;
@@ -32,6 +37,10 @@
   overflow: hidden;
   transition: transform 0.3s;
 }
+.item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
 .img {
   border-radius: 12px;
   max-width: 316px;
@@ -40,45 +49,28 @@
   object-position: center;
   width: 100%;
 }
-.cardWrapp {
-  padding: 0px 32px 34px 32px;
-  width: 100%;
+.link .button {
+  position: absolute;
+  left: 16px;
+  right: 16px;
+  bottom: 16px;
+  display: none;
 }
-.itemTitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.3;
-  text-align: center;
-  color: #282828;
-  margin-bottom: 16px;
-}
+
 .priceWrapp {
   display: flex;
   align-items: flex-end;
   gap: 20px;
 }
-.price {
-  font-weight: 600;
-  font-size: 40px;
-  line-height: 1.1;
-  color: #282828;
-}
-.pricesale {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.3;
-  text-decoration: line-through;
-  color: #8b8b8b;
-}
-
 
 
 .cardContent {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  padding: 0 32px 34px;
+  padding: 20px 32px 32px;
   width: 100%;
+  flex-grow: 1;
+  flex-basis: 40%;
 }
 
 .itemTitle {
@@ -88,18 +80,16 @@
   text-align: center;
   color: #282828;
   margin-bottom: 16px;
-  flex-grow: 1; 
+  flex-grow: 1;
 }
 
 .priceContainer {
-  margin-top: auto; 
+  margin-top: auto;
 }
 
 .priceWrapp {
   display: flex;
- 
   gap: 16px;
-
 }
 
 .price {
@@ -113,7 +103,7 @@
   font-weight: 600;
   font-size: 40px;
   line-height: 1.1;
- color: #282828;
+  color: #282828;
 }
 
 .originalPrice {
@@ -123,3 +113,24 @@
   text-decoration: line-through;
   color: #8b8b8b;
 }
+.link {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.link:hover .button {
+  display: block;
+}
+
+
+@media (max-width: 768px) {
+ .item {
+  margin: 0 auto;
+}
+
+  
+}
+
+
