--- a/src/componets/Cart/Cart.module.css
+++ b/src/componets/Cart/Cart.module.css
@@ -126,3 +126,78 @@
     flex-shrink: 1;
 
 }
+
+
+@media (max-width: 768px) {
+  .productsSection {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .item {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .img {
+    max-width: 100%;
+    max-height: 300px;
+  }
+
+  .details {
+    padding: 20px;
+    width: 100%;
+  }
+
+  .detailsTitle {
+    margin-bottom: 20px;
+    padding-right: 0;
+    text-align: center;
+  }
+
+  .test {
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+  }
+
+  .orderSummary {
+    max-width: 100%;
+  }
+
+  .removeBtn {
+    top: 10px;
+    right: 10px;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .detailsTitle {
+    font-size: 18px;
+  }
+
+  .discountedPrice {
+    font-size: 30px;
+  }
+
+  .price {
+    font-size: 16px;
+  }
+
+  .summaryTitle {
+    font-size: 30px;
+  }
+
+  .itemsCount {
+    font-size: 30px;
+  }
+
+  .amount {
+    font-size: 40px;
+  }
+
+  .test {
+    gap: 10px;
+  }
+}
